# games-in-c

./: .clang-format  CMakeLists.txt
sources/pong/: main.c
sources/snake/: CMakeLists.txt  main.c
